# ChangeLog for net-firewall/arptables
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-firewall/arptables/ChangeLog,v 1.13 2008/01/09 13:54:37 pva Exp $

  09 Jan 2008; <pva@gentoo.org> -arptables-0.0.3.ebuild,
  -arptables-0.0.3.3.ebuild:
  Removed old.

  16 Dec 2007; Samuli Suominen <drac@gentoo.org>
  arptables-0.0.3.3-r1.ebuild:
  amd64 stable wrt #201836

  11 Dec 2007; nixnut <nixnut@gentoo.org> arptables-0.0.3.3-r1.ebuild:
  Stable on ppc wrt bug 201836

  10 Dec 2007; Dawid Węgliński <cla@gentoo.org>
  arptables-0.0.3.3-r1.ebuild:
  Stable on x86 (bug #201836)

*arptables-0.0.3.3-r1 (28 Oct 2007)

  28 Oct 2007; <pva@gentoo.org> arptables-0.0.3.3.ebuild,
  +arptables-0.0.3.3-r1.ebuild:
  Fix path to arptables in arptables-{save,restore}. Thank Tyler Montbriand
  <tsm AT accesscomm.ca> for report and fix.

*arptables-0.0.3.3 (29 Aug 2007)

  29 Aug 2007; <pva@gentoo.org> metadata.xml, +arptables-0.0.3.3.ebuild:
  Version bump (bug #189939 reported by Olivier Huber <oli.huber _AT_
  gmail.com>). Fixes bug #162886, reported by Richard Benjamin Voigt
  <richardvoigt AT gmail.com>. Added base-system in metadata.

  13 Aug 2007; <pva@gentoo.org> metadata.xml:
  Took from solar per his request on -dev.

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  26 Jul 2005; David Holm <dholm@gentoo.org> arptables-0.0.3.ebuild:
  Added to ~ppc.

  31 Jan 2005; Simon Stelling <blubb@gentoo.org> arptables-0.0.3.ebuild:
  added ~amd64

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  arptables-0.0.3.ebuild:
  virtual/glibc -> virtual/libc

*arptables-0.0.3 (28 Feb 2004)

  28 Feb 2004; <solar@gentoo.org> arptables-0.0.3.ebuild:
  Arptables is used to set up, maintain, and inspect the tables of ARP rules in
  the Linux kernel. It is analogous to iptables, but operates at the ARP layer
  rather than the IP layer.
