@@ -1,6 +1,10 @@
 # ChangeLog for net-firewall/arptables
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/arptables/ChangeLog,v 1.13 2008/01/09 13:54:37 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/arptables/ChangeLog,v 1.14 2008/10/13 11:13:26 pva Exp $
+
+  13 Oct 2008; Peter Volkov <pva@gentoo.org> arptables-0.0.3.3-r1.ebuild:
+  Fixed build issue when no optimisation or only -O0 was passed in CFLAGS,
+  bug #240752, thank Diego Pettenò for report.
 
   09 Jan 2008; <pva@gentoo.org> -arptables-0.0.3.ebuild,
   -arptables-0.0.3.3.ebuild:
